Доделал главную страницу для редактирования
